--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ packages/centos/7/x86_64/RPMS
 config/openshift/pkg/s2i_install_pkg/*.tar.gz
 config/openshift/pkg/s2i_install_pkg/*.zip
 yum_repo_readme.txt
+packages/centos/base*
