--- a/offline-k8s-imagelist/k8s.images.properties
+++ b/offline-k8s-imagelist/k8s.images.properties
@@ -12,3 +12,7 @@ docker.io/rancher/local-path-provisioner:v0.0.19
 docker.io/library/busybox:1.33.0
 docker.mirrors.ustc.edu.cn/kubernetesui/dashboard:v2.1.0
 docker.mirrors.ustc.edu.cn/kubernetesui/metrics-scraper:v1.0.6
+kubernetesui/dashboard:v2.1.0
+kubernetesui/metrics-scraper:v1.0.6
+quay.io/coreos/flannel:v0.13.1-rc2
+
